SubBt/force-app/main/default/objects/Satisfaction_Question__c/Satisfaction_Question__c.object-meta.xml
<CustomObject>
    <label>Satisfaction Question</label>
    <nameField>
        <displayFormat>SAQ-{00000}</displayFormat>
        <label>SAT #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Satisfaction Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>