SubBt/force-app/main/default/objects/Satisfaction_Question__c/fields/SAT_Question__c.field-meta.xml
<CustomField>
    <fullName>SAT_Question__c</fullName>
    <label>SAT Question</label>
    <type>TextArea</type>
</CustomField>