SubBt/force-app/main/default/objects/Satisfaction_Question__c/fields/SAT_Weighting__c.field-meta.xml
<CustomField>
    <fullName>SAT_Weighting__c</fullName>
    <label>SAT Weighting</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>