SubBt/force-app/main/default/objects/Satisfaction_Question__c/fields/Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction__c</fullName>
    <label>Satisfaction</label>
    <referenceTo>Satisfaction__c</referenceTo>
    <relationshipLabel>Satisfaction Questions</relationshipLabel>
    <relationshipName>Satisfaction_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>